# OptiMath

./: .gitignore  .mailmap  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: optimath_cli.cpp
docs/: ALGORITHMS.md
include/optimath/core/: options.hpp  result.hpp  status.hpp  timer.hpp
include/optimath/linalg/: matrix.hpp  solve.hpp  vector.hpp
include/optimath/lp/: linear_program.hpp  mip_branch_and_bound.hpp  simplex.hpp
include/optimath/nlp/: bfgs.hpp  objective.hpp  penalty.hpp
public/: app.js  index.html  styles.css
src/core/: status.cpp  timer.cpp
src/linalg/: matrix.cpp  solve.cpp  vector.cpp
src/lp/: linear_program.cpp  mip_branch_and_bound.cpp  simplex.cpp
src/nlp/: bfgs.cpp  objective.cpp  penalty.cpp
tests/: public_app_test.mjs  test_common.hpp  test_lp_simplex.cpp  test_main.cpp  test_nlp_bfgs.cpp
